<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <Button
        android:id="@+id/btn_force_ldw_left"
        style="@style/CustomEditModeBottomButtonStyle"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/preview_activity_debug_btn"
        android:layout_below="@+id/preview_activity_debug_btn"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="@drawable/custom_title_layout_button"
        android:text="@string/event_ldw_left"
        android:textColor="@android:color/white"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_force_ldw_right"
        style="@style/CustomEditModeBottomButtonStyle"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/preview_activity_debug_btn"
        android:layout_below="@+id/preview_activity_debug_btn"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="@drawable/custom_title_layout_button"
        android:text="@string/event_ldw_right"
        android:textColor="@android:color/white"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_force_fcw"
        style="@style/CustomEditModeBottomButtonStyle"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/preview_activity_debug_btn"
        android:layout_below="@+id/preview_activity_debug_btn"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:background="@drawable/custom_title_layout_button"
        android:text="@string/event_fcw"
        android:textColor="@android:color/white"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_force_g_shock"
        style="@style/CustomEditModeBottomButtonStyle"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/preview_activity_debug_btn"
        android:layout_below="@+id/preview_activity_debug_btn"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_title_layout_button"
        android:text="@string/event_gshock"
        android:textColor="@android:color/white"
        android:visibility="visible"/>
</LinearLayout>